Fix line breaks in post content

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,6 +121,7 @@ html {
 
 .post-container .content {
   padding: 1rem 0 1rem 0;
+  white-space: pre-line;
 }
 
 .bottom-bar-container {
